build: remove legacy Java 9+ sbt plugin references
Motivation:
Following apache/pekko#3075 which renamed Jdk9 → Jdk21 (since Java 17 is
now the project baseline and JDK 9 features are part of the standard build),
the AutomaticModuleName sbt plugin and `--add-opens` JVM options inherited
from the Java 9 module-system era are stale references in the satellite
Pekko projects. They add noise to the build and mislead developers about
the actual Java baseline.

Modification:
- Delete project/AutomaticModuleName.scala (JPMS Automatic-Module-Name
  manifest helper) where it exists.
- Remove `AutomaticModuleName.settings(...)` calls and inline
  `"Automatic-Module-Name" -> "..."` manifest entries from build.sbt.
- Remove `--add-opens=java.base/...=ALL-UNNAMED` JVM options (both the
  single `+=` form and the `Seq(...)` form) from build.sbt.
- Update stale `// JDK 11: ...` comments to
  `// project baseline is Java 17: ...` (aligned with apache/pekko#3075).

Result:
Build definitions no longer reference legacy Java 9+ module-system helpers
or JVM options. Project baseline remains Java 17; no runtime behavior
change for end users.